Cambios 	nuevo archivo:  JORGE/#archivo nuevo1.lyx# 	nuevo archivo:  JORGE/.ipynb_checkpoints/Cryptography1-checkpoint.ipynb 	nuevo archivo:  JORGE/.ipynb_checkpoints/GANpruebaConRandomValues-checkpoint.ipynb 	nuevo archivo:  JORGE/.ipynb_checkpoints/SimpleQCryptography-checkpoint.ipynb 	nuevo archivo:  JORGE/Cryptography1.ipynb 	nuevo archivo:  JORGE/GANpruebaConRandomValues.ipynb 	modificado:     JORGE/Quantum_Cryptography2.ipynb 	nuevo archivo:  JORGE/SimpleQCryptography.ipynb 	borrado:        JORGE/Untitled.ipynb 	modificado:     JORGE/adversarial_neural_cryptography.ipynb 	nuevo archivo:  JORGE/alice.png 	nuevo archivo:  JORGE/archivo nuevo1.lyx 	nuevo archivo:  JORGE/archivo nuevo1.lyx~ 	nuevo archivo:  JORGE/bob.png 	nuevo archivo:  JORGE/eve.png 	nuevo archivo:  JORGE/model.png 	nuevo archivo:  JORGE/models/crypto/crypto2-alice.h5 	nuevo archivo:  JORGE/models/crypto/crypto2-bob.h5 	nuevo archivo:  JORGE/models/crypto/crypto2-eve.h5 	modificado:     Untitled.ipynb
 Cambios no rastreados para el commit:
	modificado:     JORGE/SimpleQCryptography.ipynb

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'm_bits' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-38ea56bc8072>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mainput0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mInput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_bits\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#message\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mainput1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mInput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk_bits\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mainput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mainput0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mainput1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0madense1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_bits\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mk_bits\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mainput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'm_bits' is not defined"
+     ]
+    }
+   ],
    "source": [
     "ainput0 = Input(shape=(m_bits,)) #message\n",
     "ainput1 = Input(shape=(k_bits,)) #key\n",
@@ -99,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
