--- a/JORGE/Quantum_Cryptography2.ipynb
+++ b/JORGE/Quantum_Cryptography2.ipynb
@@ -32,12 +32,12 @@
     {
      "data": {
       "text/plain": [
-       "{'qiskit': '0.10.3',\n",
-       " 'qiskit-terra': '0.8.1',\n",
-       " 'qiskit-ignis': '0.1.1',\n",
-       " 'qiskit-aer': '0.2.1',\n",
-       " 'qiskit-ibmq-provider': '0.2.2',\n",
-       " 'qiskit-aqua': '0.5.1'}"
+       "{'qiskit-terra': '0.12.0',\n",
+       " 'qiskit-aer': '0.4.0',\n",
+       " 'qiskit-ignis': '0.2.0',\n",
+       " 'qiskit-ibmq-provider': '0.4.6',\n",
+       " 'qiskit-aqua': '0.6.4',\n",
+       " 'qiskit': '0.15.0'}"
       ]
      },
      "execution_count": 1,
@@ -870,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
