--- a/JORGE/SimpleQCryptography.ipynb
+++ b/JORGE/SimpleQCryptography.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "# Importing standard Qiskit libraries and configuring account\n",
+    "# Importamos qiskit standard\n",
     "from qiskit import QuantumRegister, ClassicalRegister, execute\n",
     "from qiskit import QuantumCircuit, execute, Aer\n",
     "\n",
@@ -63,8 +63,8 @@
     "    \n",
     "    circ.add_register(c0)\n",
     "\n",
-    "    for i in range(qubits):\n",
-    "        circ.h(q[i])\n",
+    "    for i in range(qubits):   ##hacemos un bucle de 2 en este caso pero dependeria de lo que hicieramos.\n",
+    "        circ.h(q[i])       #aplicamos una puerta de hadarmard\n",
     "\n",
     "\n",
     "    for i in range(qubits):\n",
@@ -78,6 +78,7 @@
     "    #El backend más común en Qiskit Aer es el statevector_simulator. \n",
     "    \n",
     "    job = execute(circ, backend)\n",
+    "    \n",
     "    \n",
     "    \n",
     "    #Este simulador devuelve el estado cuántico, que es un vector complejo de dimensiones.    \n",
