Cambios a ser confirmados:

--- a/JORGE/GANpruebaConRandomValues.ipynb
+++ b/JORGE/GANpruebaConRandomValues.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model `crypto1` (Google)\n",
+    "## Modelo (Google)\n",
     "\n",
     "This model was build according to the specifications from Google's paper *Learning to protect communications with adversarial neural cryptography*."
    ]
