Tu rama está actualizada con 'origin/master'.  Cambios a ser confirmados: 	modificado:     JORGE/.ipynb_checkpoints/GANpruebaConRandomValues-checkpoint.ipynb 	modificado:     JORGE/.ipynb_checkpoints/SimpleQCryptography-checkpoint.ipynb 	modificado:     JORGE/GANpruebaConRandomValues.ipynb 	modificado:     JORGE/SimpleQCryptography.ipynb

--- a/JORGE/GANpruebaConRandomValues.ipynb
+++ b/JORGE/GANpruebaConRandomValues.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Symmetric (secret-key) encryption"
+    "# Cifrado simétrico"
    ]
   },
   {
