--- a/bibliografia/datos.bib
+++ b/bibliografia/datos.bib
@@ -1,5 +1,5 @@
 % Encoding: UTF-8
-
+%Pennylane
 @Article{bergholm2018pennylane,
   author  = {Bergholm, Ville and Izaac, Josh and Schuld, Maria and Gogolin, Christian and Blank, Carsten and McKiernan, Keri and Killoran, Nathan},
   title   = {Pennylane: Automatic differentiation of hybrid quantum-classical computations},
@@ -7,11 +7,33 @@
   year    = {2018},
 }
 
+%Articulo padre de Google
 @Article{abadi2016learning,
   author  = {Abadi, Mart{\'\i}n and Andersen, David G},
   title   = {Learning to protect communications with adversarial neural cryptography},
   journal = {arXiv preprint arXiv:1610.06918},
   year    = {2016},
+}
+
+%GAN con teoría del caos
+@incollection{purswani2020chaos,
+  title={Chaos Theory on Generative Adversarial Networks for Encryption and Decryption of Data},
+  author={Purswani, Juhi and Rajagopal, Rajesh and Khandelwal, Riya and Singh, Anuraj},
+  booktitle={Advances in Bioinformatics, Multimedia, and Electronics Circuits and Signals},
+  pages={251--260},
+  year={2020},
+  publisher={Springer}
+}
+
+%Carlos Sánchez del Río
+@book{río2016física,
+  title={F{\'\i}sica cu{\'a}ntica},
+  author={R{\'\i}o, C.S.},
+  isbn={9788436833058},
+  series={Ciencia Y T{\'e}cnica},
+  url={https://books.google.fr/books?id=gHoFDAAAQBAJ},
+  year={2016},
+  publisher={Larousse - Ediciones Pir{\'a}mide}
 }
 
 @Misc{,
