--- a/JORGE/datos.bib
+++ b/JORGE/datos.bib
@@ -36,6 +36,11 @@
   publisher={Larousse - Ediciones Pir{\'a}mide}
 }
 
+@misc{PennylaneImagen,
+  title = {Quantum Generative Adversarial Networks},
+  howpublished = {\url{hhttps://pennylane.ai/qml/demos/tutorial_QGAN.html}},
+  note = {Accessed: 2020-03-06}
+}
 
 @Misc{,
 }
