--- a/JORGE/datos.bib
+++ b/JORGE/datos.bib
@@ -42,6 +42,18 @@
   note = {Accessed: 2020-03-06}
 }
 
+@misc{EsferadeBloch,
+  title = {Esfera de Bloch},
+  howpublished = {\url{https://es.wikipedia.org/wiki/Esfera_de_Bloch}},
+  note = {Accessed: 2020-03-06}
+}
+
+@misc{GanGoogle,
+  title = {Google Generative Adversarial Networks},
+  howpublished = {\url{https://developers.google.com/machine-learning/gan/gan_structure}},
+  note = {Accessed: 2020-03-06}
+}
+
 @Misc{,
 }
 
