Cambios a ser confirmados: 	nuevo archivo:  JORGE/#archivo nuevo1.lyx# 	modificado:     JORGE/archivo nuevo1.lyx 	modificado:     JORGE/archivo nuevo1.lyx~ 	modificado:     JORGE/datos.bib 	nuevo archivo:  JORGE/pegado1.png 	modificado:     assets/The-quantum-generative-adversarial-network-QGAN-a-The-basic-components-of-QGAN_W640.jpg 	nuevo archivo:  assets/figuraRedCaotica.png

--- a/JORGE/datos.bib
+++ b/JORGE/datos.bib
@@ -26,7 +26,7 @@
 }
 
 %Carlos Sánchez del Río
-@@book{río2016física,
+@@book{rio2016fisica,
   title={F{\'\i}sica cu{\'a}ntica},
   author={R{\'\i}o, C.S.},
   isbn={9788436833058},
@@ -53,7 +53,22 @@
   howpublished = {\url{https://developers.google.com/machine-learning/gan/gan_structure}},
   note = {Accessed: 2020-03-06}
 }
-
+@article{kinnunen2015examining,
+  title={Examining the limits of Moore’s law: possible influence of technological convergence on redefining the curriculum in ICT institutions},
+  author={Kinnunen, Markku},
+  year={2015},
+  publisher={Metropolia Ammattikorkeakoulu}
+}
+@article{lundstrom2003moore,
+  title={Moore's law forever?},
+  author={Lundstrom, Mark},
+  journal={Science},
+  volume={299},
+  number={5604},
+  pages={210--211},
+  year={2003},
+  publisher={American Association for the Advancement of Science}
+}
 @Misc{,
 }
 
