--- a/JORGE/archivo nuevo1.lyx
+++ b/JORGE/archivo nuevo1.lyx
@@ -5,6 +5,9 @@
 \save_transient_properties true
 \origin unavailable
 \textclass paper
+\begin_preamble
+\usepackage{braket}
+\end_preamble
 \use_default_options true
 \maintain_unincluded_children false
 \language spanish
@@ -84,7 +87,11 @@ Hybrid Quantum Generative Adversarial Network to protect communications.
 
 \begin_layout Author
 \noindent
-Jorge Calleja García
+Autor: Jorge Calleja García
+\end_layout
+
+\begin_layout Standard
+Tutor: Miguel Arevalillo Herráez
 \end_layout
 
 \begin_layout Section
@@ -450,7 +457,36 @@ En la computación cuántica se trata con el equivalente de bits llamados
  qubits , que notoriamente pueden manejar información en un estado no binario
  gracias a una propiedad de los sistemas cuánticos llamada superposición
  (a veces se dice que pueden representar 0s y 1s en al mismo tiempo).
- Un circuito cuántico es una serie de operaciones aplicadas a qubits que
+ 
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{equation}
+c1\Ket{0}+c_{2}\Ket{1}
+\end{equation}
+
+\end_inset
+
+Sobre estos qubits se pueden realizar operaciones.
+ La función que cambia las propiedades de cada qubit es el operador es una
+ función que va de un espacio de estados físicos a otro espacio de estados
+ físicos.
+ 
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{equation}
+\end{equation}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Un circuito cuántico es una serie de operaciones aplicadas a qubits que
  cambian su estado, por ejemplo , cambiando su fase relativa.
  Los Qubits se pueden representar geométricamente con una llamada esfera
  de Bloch , por lo que una operación en un qubit corresponde a una rotación
@@ -481,6 +517,19 @@ status open
 \backslash
 cite{EsferadeBloch}
 \end_layout
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename QiskitCircuit.png
+	display false
+	width 8cm
+	height 8cm
+	keepAspectRatio
 
 \end_inset
 
