--- a/JORGE/GANpruebaConRandomValues-Copy1.ipynb
+++ b/JORGE/GANpruebaConRandomValues-Copy1.ipynb
@@ -41,6 +41,7 @@
     "from keras.layers import LeakyReLU\n",
     "\n",
     "import pydot\n",
+    "from tensorflow import keras\n",
     "\n",
     "from keras.utils.vis_utils import plot_model\n",
     "from keras import backend as K\n",
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-24T16:55:24.834360Z",
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-24T17:40:45.280385Z",
