--- a/JORGE/archivo nuevo1.lyx
+++ b/JORGE/archivo nuevo1.lyx
@@ -241,6 +241,10 @@ Computación paralela:
 Inteligencia artificial:
 \end_layout
 
+\begin_layout Itemize
+Computación biológica:
+\end_layout
+
 \begin_layout Standard
 El campo de la inteligencia artificial (IA) ha experimentado un crecimiento
  sobresaliente en las últimas dos décadas.
