--- a/JORGE/datos.bib
+++ b/JORGE/datos.bib
@@ -69,6 +69,28 @@
   year={2003},
   publisher={American Association for the Advancement of Science}
 }
+@article{computacionbiologica1,
+author = {Woods, Damien and Doty, David and Myhrvold, Cameron and Hui, Joy and Zhou, Felix and Yin, Peng and Winfree, Erik},
+year = {2019},
+month = {03},
+pages = {366-372},
+title = {Diverse and robust molecular algorithms using reprogrammable DNA self-assembly},
+volume = {567},
+journal = {Nature},
+doi = {10.1038/s41586-019-1014-9}
+}
+
+@article{qiu2013rna,
+  title={RNA nanotechnology for computer design and in vivo computation},
+  author={Qiu, Meikang and Khisamutdinov, Emil and Zhao, Zhengyi and Pan, Cheryl and Choi, Jeong-Woo and Leontis, Neocles B and Guo, Peixuan},
+  journal={Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+  volume={371},
+  number={2000},
+  pages={20120310},
+  year={2013},
+  publisher={The Royal Society Publishing}
+}
+
 @Misc{,
 }
 
