--- a/JORGE/archivo nuevo1.lyx
+++ b/JORGE/archivo nuevo1.lyx
@@ -242,7 +242,38 @@ Inteligencia artificial:
 \end_layout
 
 \begin_layout Itemize
-Computación biológica:
+Computación biológica: La idea detrás de la computación de ADN es sustituir
+ los enlaces químicos por señales eléctricas y ácidos nucleicos por silicio
+ para crear software biomolecular y la idea de los computadores de ARN se
+ basa e
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename pegado2.png
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Esquema mostrando las características de un computador de ADN y otro de
+ ARN.
+ Imagen extraída de 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+cite{qiu2013rna}
+\end_layout
+
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Standard
@@ -264,6 +295,26 @@ El campo de la inteligencia artificial (IA) ha experimentado un crecimiento
  Relacionamos la idea del esquema de cifrado simétrico de dos partes de
  Google con un esquema de cifrado de varias partes.
  
+\end_layout
+
+\begin_layout Standard
+Después de esta introducción sobre tipos de computación mi tfg se basa en
+ la creación de un sistema híbrido de redes neuronales y circuitos cuánticos
+ con el objetivo de mejorar las comunicaciones.
+ Realmente este tema pertenece a tres disciplinas diferentes.
+ 
+\end_layout
+
+\begin_layout Standard
+El sistema GAN, está relacionado con el conocimiento adquirido en asignaturas
+ como Sistemas Inteligentes y Minería de Datos.
+ La teoría de la seguridad de las comunicaciones está relacionada con la
+ asignatura de Seguridad Informática.
+\end_layout
+
+\begin_layout Standard
+Pienso que los computadores cuánticos pueden llegar a ser una herramienta
+ muy importante para el desarrollo de nuevas tecnologías en el futuro.
 \end_layout
 
 \begin_layout Section
