--- a/bibliografia/datos.bib
+++ b/bibliografia/datos.bib
@@ -26,7 +26,7 @@
 }
 
 %Carlos Sánchez del Río
-@@book{río2016física,
+@book{río2016física,
   title={F{\'\i}sica cu{\'a}ntica},
   author={R{\'\i}o, C.S.},
   isbn={9788436833058},
@@ -35,7 +35,15 @@
   year={2016},
   publisher={Larousse - Ediciones Pir{\'a}mide}
 }
-
+%qiskit
+@misc{Qiskit-Textbook,
+       author = {Abraham Asfaw and Luciano Bello and Yael Ben-Haim and Sergey Bravyi and Lauren Capelluto and Almudena Carrera Vazquez and Jack Ceroni and Frank Harkins and
+       Jay Gambetta and Shelly Garion and Leron Gil and Salvador De La Puente Gonzalez and David McKay and Zlatko Minev and Paul Nation and Anna Phan
+               and Arthur Rattew and Joachim Schaefer and Javad Shabani and John Smolin and Kristan Temme and Madeleine Tod and James Wootton.},
+       title = {Learn Quantum Computation Using Qiskit},
+       year = {2020},
+       url = {http://community.qiskit.org/textbook},
+}
 
 @Misc{,
 }
