--- a/JORGE/SimpleQCryptography.ipynb
+++ b/JORGE/SimpleQCryptography.ipynb
@@ -156,11 +156,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Siguiente prueba"
+   ]
   }
  ],
  "metadata": {
