--- a/JORGE/anuevo.lyx
+++ b/JORGE/anuevo.lyx
@@ -222,6 +222,14 @@ o cuántico y más lejanos estarán presentar un comportamiento clásico.
 \end_layout
 
 \begin_layout Standard
+Una computadora es una máquina que acepta datos como entrada, los procesa
+ usando programas, y produce los datos procesados como información.
+ Una computadora cuenta, en el caso de los computadores que solemos usar
+ son cuentas binarias.
+ O el valor es 1 o 0, este es un axioma en la computación.
+\end_layout
+
+\begin_layout Standard
 \noindent
 Al igual que nuestras computadoras digitales estándar, las computadoras
  cuánticas se basan en esta misma idea básica.
@@ -231,46 +239,27 @@ Al igual que nuestras computadoras digitales estándar, las computadoras
 \end_layout
 
 \begin_layout Standard
-\noindent
-Hay que destacar que, a pesar de los siglos, los sistemas de cifrado clásicos
- y los modernos o actuales se diferencian muy poco entre sí.
- En el fondo, hacen las mismas operaciones, si bien los primeros estaban
- orientados a letras o caracteres, y los segundos lógicamente a bits y bytes.
- Pero los principios en los que se basan para conseguir su objetivo de enmascara
-r la información siguen siendo los mismos, la difusión y la confusión
+Frente al bit clásico, que representa uno u otro estado de un sistema de
+ dos estados, un qubit es una combinación lineal de dos estados.
+ Es decir, un qubit individual llena un espacio de dimensión 2.
+ Una base de dicho espacio está representada por los estados
 \end_layout
 
 \begin_layout Standard
-\noindent
-La invención de la criptografía asimétrica, también conocida como criptografía
- de clave pública, ha sido el logro más importante de la criptografía moderna.
- En este sistema, cada usuario genera un par de claves, una clave pública,
- distribuida libremente a todos, y una clave privada, mantenida en el máximo
- secreto.
- Alice puede cifrar un mensaje usando la clave pública de Bob, pero solo
- Bob puede descifrarlo usando su clave privada.
- 
-\end_layout
+\begin_inset Formula 
+\begin{eqnarray}
+\Ket{0} & =\left[\begin{array}{c}
+1\\
+0
+\end{array}\right] & \Ket{1}=\left[\begin{array}{c}
+0\\
+1
+\end{array}\right]
+\end{eqnarray}
 
-\begin_layout Standard
-\noindent
-Sin embargo, para implementar esta característica, tenemos que usar funciones
- matemáticas que generalmente son difíciles de resolver pero, una vez que
- se conoce una solución, no es tan difícil verificarla.
- Las implementaciones contemporáneas de algoritmos matemáticos hacen uso
- de factorización de enteros, logaritmo discreto y relaciones de curva elíptica.
- No es el alcance de este cuaderno entrar en los detalles de este proceso,
- que es ampliamente discutido en la literatura.
-\end_layout
+\end_inset
 
-\begin_layout Standard
-\noindent
-Digamos que ofrece un buen compromiso entre seguridad y practicidad, superando
- el problema de la generación de claves de una sola vez y, lo más importante,
- el intercambio de claves.
- De hecho, en casos de uso real, casi todas las principales implementaciones
- de criptografía se realizan de forma asimétrica (aunque a veces en combinación
- con claves simétricas), como TLS, S / MIME, PGP, OMEMO, OTR, etc.
+
 \end_layout
 
 \begin_layout Standard
@@ -330,6 +319,42 @@ El campo de la inteligencia artificial (IA) ha experimentado un crecimiento
  Relacionamos la idea del esquema de cifrado simétrico de dos partes de
  Google con un esquema de cifrado de varias partes.
  
+\end_layout
+
+\begin_layout Standard
+Además dentro del campo de la computación teórica la computación cuántica
+ puede ayudar a entender mejor uno de los problemas del milenio 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+cite{ProblemasMilenio}
+\end_layout
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+Todo problema P es NP, pero la relación inversa no está clara.
+ Un ejemplo de problema NP es la factorización de un entero: aunque no se
+ conoce ningún algoritmo de tiempo polinómico para resolverlo, es muy sencillo
+ comprobar si un candidato a divisor del entero realmente lo es.
+ Ahora bien: el que no se conozca ningún algoritmo de tiempo polinómico
+ para computar un problema no signica necesariamente que no exista ninguno.
+ En otras palabras, ¾cómo podemos estar seguros de que no existe ningún
+ algoritmo en tiempo polinómico para resolver un cierto problema NP? Esta
+ es la esencia de la conjetura P 6= NP, uno de los llamados problemas del
+ milenio.2 Debemos insistir en el hecho de que este problema es únicamente
+ de índole lógico-matemática.
+ En otras palabras: resolver un problema en tiempo polinómico mediante un
+ computador que vaya más allá de la máquina de Turing no convierte al problema
+ en miembro de la clase P.
+ Un ejemplo de dicho posible computador sería el computador cuántico.
 \end_layout
 
 \begin_layout Section
@@ -452,6 +477,10 @@ Fundamentos.
 Computación cuántica.
 \end_layout
 
+\begin_layout Subsubsection
+Introducción 
+\end_layout
+
 \begin_layout Standard
 En la computación cuántica se trata con el equivalente de bits llamados
  qubits , que notoriamente pueden manejar información en un estado no binario
@@ -463,7 +492,13 @@ En la computación cuántica se trata con el equivalente de bits llamados
 \begin_layout Standard
 \begin_inset Formula 
 \begin{equation}
-c1\Ket{0}+c_{2}\Ket{1}
+c1\Ket{0}+c_{2}\Ket{1}=c_{1}\left[\begin{array}{c}
+0\\
+1
+\end{array}\right]+c_{2}\left[\begin{array}{c}
+1\\
+0
+\end{array}\right]
 \end{equation}
 
 \end_inset
@@ -506,6 +541,32 @@ O\varPsi_{n}=o_{_{n}}\varPsi_{n}
 \end_layout
 
 \begin_layout Standard
+Tal que, o
+\begin_inset Formula $_{n}$
+\end_inset
+
+son los valores propios del observable en relación a la función de onda
+ 
+\begin_inset Formula $\varPsi_{n}$
+\end_inset
+
+
+\family roman
+\series medium
+\shape up
+\size normal
+\emph off
+\bar no
+\strikeout off
+\xout off
+\uuline off
+\uwave off
+\noun off
+\color none
+ .
+\end_layout
+
+\begin_layout Standard
 Un circuito cuántico es una serie de operaciones aplicadas a qubits que
  cambian su estado, por ejemplo , cambiando su fase relativa.
  Los Qubits se pueden representar geométricamente con una llamada esfera
@@ -514,10 +575,14 @@ Un circuito cuántico es una serie de operaciones aplicadas a qubits que
 \end_layout
 
 \begin_layout Standard
+\noindent
+\align center
 \begin_inset Graphics
 	filename /root/Escritorio/Quantum/assets/800px-Bloch_sphere.svg.png
+	display false
 	width 8cm
 	height 8cm
+	keepAspectRatio
 	groupId graficos
 
 \end_inset
@@ -544,10 +609,21 @@ cite{EsferadeBloch}
 \end_layout
 
 \begin_layout Standard
+Para manipular una entrada necesitamos aplicar las operaciones básicas de
+ la computación cuántica.
+ Estas se conocen como puertas cuánticas, que realmente son operadores unitarios.
+ Una sucesión de puertas cuánticas es un circuito cuántico.
+\end_layout
+
+\begin_layout Standard
+\noindent
+\align center
 \begin_inset Graphics
 	filename QiskitCircuit.png
+	display false
 	width 8cm
 	height 8cm
+	keepAspectRatio
 	groupId graficos
 
 \end_inset
@@ -556,10 +632,124 @@ cite{EsferadeBloch}
 \end_layout
 
 \begin_layout Standard
+Ejemplo de esquema de un circuito cuántico.
+ Imagen obtenida de 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+cite{Qiskit-Textbook}
+\end_layout
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Subsubsection
+Puertas cuánticas
+\end_layout
+
+\begin_layout Standard
+Como en la computación clásica, en la computación cuántica tenemos diferentes
+ tipos de puertas 
+\begin_inset Quotes fld
+\end_inset
+
+lógicas
+\begin_inset Quotes frd
+\end_inset
+
+, con la unión de diferentes tipos de puertas llegamos a obtener algoritmos.
+\end_layout
+
+\begin_layout Standard
+En este apartado voy a hablar brevemente de los fundamentos físicos de las
+ puertas más comunmente usadas dentro de la computación cuántica.
+\end_layout
+
+\begin_layout Itemize
+Puerta NOP:
+\end_layout
+
+\begin_layout Standard
+La puerta X actúa en un solo qubit.
+ Es el análogo cuántico de la puerta NOT para ordenadores clásicas.
+ 
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{equation}
+X=\begin{pmatrix}0 & 1\\
+1 & 0
+\end{pmatrix}
+\end{equation}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+Puerta Hadamard:
+\end_layout
+
+\begin_layout Standard
+La puerta Hadamard actúa en un solo qubit.
+ 
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{equation}
+H=\frac{1}{\sqrt{2}}\begin{pmatrix}1 & 1\\
+1 & -1
+\end{pmatrix}
+\end{equation}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Convierte:
+\begin_inset Formula 
+\begin{equation}
+\Ket{0}\rightarrow\frac{\Ket{0}+\Ket{1}}{\sqrt{2}}
+\end{equation}
+
+\end_inset
+
+
+\begin_inset Formula 
+\begin{equation}
+\Ket{1}\rightarrow\frac{\Ket{0}-\Ket{1}}{\sqrt{2}}
+\end{equation}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+La puerta de Hadamard es la versión de un qubit de la transformada cuántica
+ de Fourier.
+\end_layout
+
+\begin_layout Standard
+\noindent
+\align center
 \begin_inset Graphics
 	filename /root/Escritorio/Quantum/assets/Puerta cuántica.png
+	display false
 	width 8cm
 	height 8cm
+	keepAspectRatio
 	groupId graficos
 
 \end_inset
@@ -567,8 +757,70 @@ cite{EsferadeBloch}
 
 \end_layout
 
+\begin_layout Standard
+Esquema de encapsulación entre los diferentes conceptos de la computación
+ cuántica.
+\end_layout
+
+\begin_layout Subsubsection
+Aprendizaje máquina cuántico
+\end_layout
+
 \begin_layout Subsection
 Criptografía
+\end_layout
+
+\begin_layout Subsubsection
+Introducción
+\end_layout
+
+\begin_layout Standard
+\noindent
+Hay que destacar que, a pesar de los siglos, los sistemas de cifrado clásicos
+ y los modernos o actuales se diferencian muy poco entre sí.
+ En el fondo, hacen las mismas operaciones, si bien los primeros estaban
+ orientados a letras o caracteres, y los segundos lógicamente a bits y bytes.
+ Pero los principios en los que se basan para conseguir su objetivo de enmascara
+r la información siguen siendo los mismos, la difusión y la confusión
+\end_layout
+
+\begin_layout Standard
+\noindent
+La invención de la criptografía asimétrica, también conocida como criptografía
+ de clave pública, ha sido el logro más importante de la criptografía moderna.
+ En este sistema, cada usuario genera un par de claves, una clave pública,
+ distribuida libremente a todos, y una clave privada, mantenida en el máximo
+ secreto.
+ Alice puede cifrar un mensaje usando la clave pública de Bob, pero solo
+ Bob puede descifrarlo usando su clave privada.
+ 
+\end_layout
+
+\begin_layout Standard
+\noindent
+Sin embargo, para implementar esta característica, tenemos que usar funciones
+ matemáticas que generalmente son difíciles de resolver pero, una vez que
+ se conoce una solución, no es tan difícil verificarla.
+ Las implementaciones contemporáneas de algoritmos matemáticos hacen uso
+ de factorización de enteros, logaritmo discreto y relaciones de curva elíptica.
+ No es el alcance de este cuaderno entrar en los detalles de este proceso,
+ que es ampliamente discutido en la literatura.
+\end_layout
+
+\begin_layout Standard
+\noindent
+Digamos que ofrece un buen compromiso entre seguridad y practicidad, superando
+ el problema de la generación de claves de una sola vez y, lo más importante,
+ el intercambio de claves.
+ De hecho, en casos de uso real, casi todas las principales implementaciones
+ de criptografía se realizan de forma asimétrica (aunque a veces en combinación
+ con claves simétricas), como TLS, S / MIME, PGP, OMEMO, OTR, etc.
+\end_layout
+
+\begin_layout Standard
+Muchas técnicas criptográcas se basan en la utilización de problemas NP
+ (de fácil vericación) que se cree que no son P (de fácil solución).
+ El ejemplo más característico sería la factorización de enteros.
 \end_layout
 
 \begin_layout Subsubsection
@@ -673,8 +925,10 @@ Fundamento del algoritmo
 \begin_layout Standard
 \begin_inset Graphics
 	filename /root/Escritorio/Quantum/assets/gan_diagram.svg
+	display false
 	width 8cm
 	height 8cm
+	keepAspectRatio
 	groupId graficos
 
 \end_inset
@@ -857,34 +1111,11 @@ Puerta de NOP:
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula 
-\begin{equation}
-NOT=\begin{pmatrix}0 & 1\\
-1 & 0
-\end{pmatrix}
-\end{equation}
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
 Puerta de Hadamard:
 \end_layout
 
 \begin_layout Standard
 Esta puerta consiste en aplicar al estado 
-\begin_inset Formula 
-\begin{equation}
-H=\frac{1}{\sqrt{2}}\begin{pmatrix}1 & 1\\
-1 & -1
-\end{pmatrix}
-\end{equation}
-
-\end_inset
-
-
 \end_layout
 
 \begin_layout Section
